--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: Teiki <Teiki@student.42.fr>                +#+  +:+       +#+         #
+#    By: jlitaudo <jlitaudo@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/01 13:00:31 by jlitaudo          #+#    #+#              #
-#    Updated: 2023/01/06 22:48:50 by Teiki            ###   ########.fr        #
+#    Updated: 2023/04/18 16:15:12 by jlitaudo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -100,11 +100,11 @@ all:		${NAME}
 $(OBJ_DIR)%.o: %.c $(HEAD)
 			@mkdir -p $(@D)
 			@echo "$(_GREEN)compiling: $<$(_END)"
-			@${CC} ${FLAG} -I $(HEAD_DIR) -c $< -o $@ 
+			@${CC} -pthread ${FLAG} -I $(HEAD_DIR) -c $< -o $@ 
 
 $(NAME): 	${OBJ} $(HEAD)
 			@echo "$(_BOLD)$(_BLUE)compiling: $@$(_END)"
-			@${CC} -o ${NAME} ${OBJ} #-fsanitize=thread
+			@${CC} -pthread -o ${NAME} ${OBJ} #-fsanitize=thread
 			@echo "$(_BOLD)$(_WHITE)$@ SUCCESSFULLY CREATED$(_END)"
 
 norm:		$(NORM) $(SRC)
